redis (5:6.0.6-3chl1~focal1) focal; urgency=low

  * Compile with TLS support. 

 -- Chris Lea <chris.lea@gmail.com>  Sat, 01 Aug 2020 15:16:02 -0700

redis (5:6.0.6-2chl1~focal1) focal; urgency=medium

  * Bump to make Launchpad build with sanctioned orig source. 

 -- Chris Lea <chris.lea@gmail.com>  Sat, 01 Aug 2020 00:32:35 -0700

redis (5:6.0.6-1chl1~focal1) focal; urgency=medium

  * Fix crash when enabling CLIENT TRACKING with prefix
  * EXEC always fails with EXECABORT and multi-state is cleared
  * RESTORE ABSTTL won't store expired keys into the db
  * redis-cli better handling of non-pritable key names
  * TLS: Ignore client cert when tls-auth-clients off
  * Tracking: fix invalidation message on flush
  * Notify systemd on Sentinel startup
  * Fix crash on a misuse of STRALGO
  * Few fixes in module API
  * Fix a few rare leaks (STRALGO error misuse, Sentinel)
  * Fix a possible invalid access in defrag of scripts (unlikely to cause real harm)
  * LPOS command to search in a list
  * Use user+pass for MIGRATE in redis-cli and redis-benchmark in cluster mode
  * redis-cli support TLS for --pipe, --rdb and --replica options
  * TLS: Session caching configuration support

 -- Chris Lea <chris.lea@gmail.com>  Sat, 01 Aug 2020 00:13:27 -0700

redis (5:6.0.5-1chl1~focal1) focal; urgency=medium

  * Fix handling of speical chars in ACL LOAD.
  * Make Redis Cluster more robust about operation errors that may lead
    to two clusters to mix together.
  * Revert the sendfile() implementation of RDB transfer. It causes some delay.
  * Fix TLS certificate loading for chained certificates.
  * Fix AOF rewirting of KEEPTTL SET option.
  * Fix MULTI/EXEC behavior during -BUSY script errors.

 -- Chris Lea <chris.lea@gmail.com>  Thu, 11 Jun 2020 20:03:31 -0700

redis (5:6.0.4-2chl1~focal1) focal; urgency=high

  * Bump to use a source tarball already in the Ubuntu repos. 

 -- Chris Lea <chris.lea@gmail.com>  Wed, 03 Jun 2020 20:54:26 -0700
