@@ -1,0 +1,37 @@
+name: Package
+
+on: push
+
+jobs:
+  package:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Install dependencies
+      run: |
+          sudo apt-get update && sudo apt-get install debhelper tcl-tls
+    - name: Setup GPG key
+      run: |
+          mkdir -p ~/.gnupg
+          echo "$GPG_SIGNING_KEY" | gpg --import
+      env:
+        GPG_SIGNING_KEY: ${{ secrets.GPG_SIGNING_KEY }}
+    - name: Get upstream source tarball
+      run: |
+          VERSION=$(head -1 debian/changelog | sed 's/^.*([0-9]*:*\([0-9.]*\)-.*$/\1/')
+          curl --silent -L "https://github.com/redis/redis/archive/${VERSION}.tar.gz" -o ../redis_${VERSION}.orig.tar.gz
+    - name: Build source package
+      run: |
+          for release in $RELEASES; do \
+              git reset --hard ;\
+              git clean -f -d ;\
+              tar --strip-components=1 --extract --gunzip --file ../redis_*.orig.tar.gz ;\
+              sed -i "s/@RELEASE@/$release/g" debian/changelog ;\
+              dpkg-buildpackage -S ;\
+          done
+
+          # testing -- inspect results
+          ls -lR ..
+          cat ../*.dsc
+      env:
+        RELEASES: "xenial bionic focal"
