@@ -1,1 +1,1 @@
-extend-diff-ignore = "^\.travis\.yml$"
+extend-diff-ignore = "^\.github/.*"
